# flimanalysis

./: CMakeLists.txt  Makefile  Makefile.in  README.md  TODO  conanfile.txt  config.h  config.h.in  config.status  configure  configure.ac  fitpt3data  global_results.csv  log  pt3fit.ini  residuals.csv
autom4te.cache/: output.0  requests  traces.0
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  chgext.c  convolution.c  convolution.h  em.c  em.h  errors.h  ferrorf.c  fileio.c  fileio.h  filnames.h  fit.c  fit.h  fitpt3data.c  flimanalysis  global_results.csv  gnuplot_i.c  gnuplot_i.h  ini.c  ini.h  levmar_mle_diff.h  lm_mle_compiler.h  lm_mle_diff.c  pt3fit_one_roi.ini  pt3io.c  pt3io.h  read_qadata.c  read_qadata.h  readpt3.c  readpt3.h  residuals.csv  roland.ini  roland.ini~  utils.c  utils.h
